<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>Templete</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <selenium.version>4.27.0</selenium.version> <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <junit.version>5.10.0</junit.version> <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <allure-generator.version>2.32.0</allure-generator.version> <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-generator -->
        <cucumber.version>7.20.1</cucumber.version> <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
        <json-simple.version>1.1.1</json-simple.version> <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
        <slf4j-simple.version>2.0.16</slf4j-simple.version> <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
        <log4j-core.version>2.21.0</log4j-core.version> <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
        <log4j-api.version>2.21.0</log4j-api.version> <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
        <commons-logging.version>1.2</commons-logging.version> <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
        <lombok.version>1.18.32</lombok.version> <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <annotations.version>RELEASE</annotations.version> <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
        <webdrivermanager.version>5.9.0</webdrivermanager.version> <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
        <restassured.version>5.4.0</restassured.version> <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> <!-- https://maven.apache.org/general.html#encoding-warning -->
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> <!-- https://maven.apache.org/general.html#encoding-warning -->
        <maven.compiler.source>17</maven.compiler.source> <!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
        <maven.compiler.target>17</maven.compiler.target> <!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
        <allure.version>2.29.0</allure.version> <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-bom -->
        <aspectj.version>1.9.22</aspectj.version> <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-bom</artifactId>
                <version>${allure.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.11.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-bom</artifactId>
                <version>${cucumber.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Nuevos -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-cucumber7-jvm</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit-platform</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-generator</artifactId>
            <version>${allure-generator.version}</version>
            <type>pom</type>
        </dependency>



        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit-platform-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Selenium -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-devtools-v130</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <!-- JUnit -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- REST Assured -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${restassured.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Cucumber -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <!-- JSON Simple -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${json-simple.version}</version>
        </dependency>

        <!-- Commons Logging -->
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>${commons-logging.version}</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Log4j -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j-core.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j-api.version}</version>
        </dependency>

        <!-- Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${annotations.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- WebDriverManager -->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <!-- Maven Surefire Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <!--suppress UnresolvedMavenProperty -->
                        <cucumber.filter.tags>${cucumber.filter.tags}</cucumber.filter.tags>
                    </systemPropertyVariables>
                    <!-- Consider changing this for production -->
                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.10.0</version>
                <executions>
                    <execution>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <reportVersion>${allure.version}</reportVersion>
                    <resultsDirectory>${project.build.directory}\allure-results</resultsDirectory>
                    <reportDirectory>${project.build.directory}\allure-report</reportDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>